# gsmartcontrol

./: .clang-tidy  .gitattributes  .gitignore  .svnignore-update.sh  .svnignore.txt  0test_binary.sh  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  ChangeLog  Doxyfile  LICENSE_gsmartcontrol.txt  LICENSE_hz.txt  LICENSE_pcrecpp.txt  LICENSE_whatever.txt  Makefile.am  NEWS  NEWS.txt  README.md  README.txt  SECURITY.md  TODO  autogen.sh  baqup  compilation_flags.in  configure-dev  configure.ac  file2csource.sh  gsmartcontrol.in.spec  gsmartcontrol.kdevelop  gsmartcontrol.spec.in  version.txt
contrib/: CMakeLists.txt
contrib/cron-based_noadmin/: cron_gather_smart.sh  crontab.example  smartctl_subst.sh
data/: CMakeLists.txt  Makefile.am  cpack_options.cmake  create_ico.sh  debian-postinst.in.sh  debian-postrm.in.sh  gsmartcontrol-root.in  gsmartcontrol-root.in.sh  gsmartcontrol.1  gsmartcontrol.appdata.in.xml  gsmartcontrol.appdata.xml.in  gsmartcontrol.in.desktop  gsmartcontrol_root.sh.in  org.gsmartcontrol.in.policy  rpm-post-install.in.sh
data/128/: Makefile.am
data/16/: Makefile.am
data/22/: Makefile.am
data/32/: Makefile.am
data/48/: Makefile.am
data/cmake/: FindFilesystem.cmake
data/doxygen/: doxy_main_page.h
data/man1/: gsmartcontrol.1
data/nsis/: Makefile.am  distribution-nogtk.txt.in  distribution.in.txt  distribution.txt.in  gsmartcontrol.in.nsi  gsmartcontrol.nsi.in
dependencies/: CMakeLists.txt
dependencies/catch2/: CMakeLists.txt  version.txt
dependencies/fmt/: CMakeLists.txt  version.txt
dependencies/json/: CMakeLists.txt  json_version.txt
dependencies/leaf/: CMakeLists.txt  version.txt
dependencies/nlohmann_json/: CMakeLists.txt  version.txt
dependencies/tl_expected/: CMakeLists.txt  version.txt
dependencies/whereami/: CMakeLists.txt  version.txt
gsmartcontrol/: .clang-tidy  .svnignore-update.sh  CMakeLists.txt  COPYING  Doxyfile  INSTALL  LICENSE_gsmartcontrol.txt  LICENSE_hz.txt  Makefile.am  Makefile.in  NEWS  README.txt  TODO  config.h.in  configure-dev  configure.ac  file2csource.sh  gsmartcontrol.kdevelop  gsmartcontrol.spec.in
gsmartcontrol/autoconf.m4/: ac_cxx_exceptions.m4  ac_cxx_rtti.m4  ac_cxx_verbose_terminate_handler.m4  app_choose_gld_reader.m4  app_compiler_options.m4  app_cxx_extern_c_overload.m4  app_detect_os.m4  app_use_system_extensions.m4
gsmartcontrol/data/: Makefile.am  Makefile.in  gsmartcontrol-root.in  gsmartcontrol.1  org.gsmartcontrol.policy
gsmartcontrol/debian.dist/: Makefile.am  control  copyright  docs
gsmartcontrol/doc/: LICENSE_gsmartcontrol.txt  NEWS.txt
gsmartcontrol/po/: POTFILES.in
gsmartcontrol/src/: Makefile.am  Makefile.in  doxy_main_page.h  global_macros.h  gsc_about_dialog.cpp  gsc_about_dialog.h  gsc_add_device_window.cpp  gsc_executor_error_dialog.cpp  gsc_executor_error_dialog.h  gsc_executor_log_window.cpp  gsc_executor_log_window.h  gsc_help_window.cpp  gsc_help_window.h  gsc_info_window.cpp  gsc_info_window.h  gsc_init.cpp  gsc_init.h  gsc_main.cpp  gsc_main_window.cpp  gsc_main_window.h  gsc_main_window_iconview.h  gsc_preferences_window.cpp  gsc_preferences_window.h  gsc_settings.h  gsc_text_window.h  gsc_winres.rc.in  gsmartcontrol.exe.manifest.in  local_glibmm.h
packaging/: CMakeLists.txt  cpack_options.cmake
packaging/appimage/: README.md  build-appimage.sh
packaging/cpack_rpm/: rpm-post-install.in.sh
packaging/nsis/: distribution.in.txt  gsmartcontrol.in.nsi.old
packaging/obs_debian/: debian.changelog  debian.control  debian.copyright  debian.rules  gsmartcontrol-Debian_Testing.dsc  gsmartcontrol-Debian_Unstable.dsc  gsmartcontrol-xUbuntu_21.10.dsc  gsmartcontrol.dsc
packaging/obs_rpm/: gsmartcontrol-rpmlintrc  gsmartcontrol.changes  gsmartcontrol.spec
src/: CMakeLists.txt  Makefile.am  gsc_about_dialog.cpp  gsc_about_dialog.h  gsc_add_device_window.cpp  gsc_add_device_window.h  gsc_executor_error_dialog.cpp  gsc_executor_error_dialog.h  gsc_executor_log_window.cpp  gsc_executor_log_window.h  gsc_help_window.cpp  gsc_help_window.h  gsc_info_window.cpp  gsc_info_window.h  gsc_init.cpp  gsc_init.h  gsc_main.cpp  gsc_main_window.cpp  gsc_main_window.h  gsc_main_window_iconview.h  gsc_preferences_window.cpp  gsc_preferences_window.h  gsc_settings.h  gsc_startup_settings.h  gsc_text_window.h  gsc_winres.in.rc  gsc_winres.rc.in  gsmartcontrol.exe.manifest.in  local_glibmm.h
src/applib/: CMakeLists.txt  Makefile.am  app_builder_widget.h  app_gtkmm_features.h  app_gtkmm_tools.cpp  app_gtkmm_tools.h  app_gtkmm_utils.cpp  app_gtkmm_utils.h  app_pango_utils.cpp  app_pango_utils.h  app_pcrecpp.h  app_regex.h  app_ui_res_utils.h  app_ui_res_utils_test_data.cpp  async_command_executor.cpp  async_command_executor.h  ata_storage_property.cpp  ata_storage_property.h  ata_storage_property_descr.cpp  ata_storage_property_descr.h  cli_executors.h  cmdex.cpp  cmdex.h  cmdex_sync.cpp  cmdex_sync.h  cmdex_sync_gui.cpp  cmdex_sync_gui.h  command_executor.cpp  command_executor.h  command_executor_3ware.h  command_executor_areca.h  command_executor_factory.cpp  command_executor_factory.h  command_executor_gui.cpp  command_executor_gui.h  executor_factory.cpp  executor_factory.h  gsc_settings.h  gui_utils.cpp  gui_utils.h  (+69 more)
src/build_config/: CMakeLists.txt  build_config.in.h  compiler_options.cmake  config.in.h
src/gui/: CMakeLists.txt  gsc_about_dialog.cpp  gsc_about_dialog.h  gsc_add_device_window.cpp  gsc_add_device_window.h  gsc_executor_error_dialog.cpp  gsc_executor_error_dialog.h  gsc_executor_log_window.cpp  gsc_executor_log_window.h  gsc_info_window.cpp  gsc_info_window.h  gsc_init.cpp  gsc_init.h  gsc_main_window.cpp  gsc_main_window.h  gsc_main_window_iconview.cpp  gsc_main_window_iconview.h  gsc_preferences_window.cpp  gsc_preferences_window.h  gsc_startup_settings.h  gsc_text_window.h  gsc_winres.in.rc  gsmartcontrol.exe.in.manifest
src/hz/: CMakeLists.txt  Makefile.am  any_convert.h  any_type.h  any_type_holder.h  any_type_test.cpp  ascii.h  bad_cast_exception.h  bin2ascii_encoder.h  bin2ascii_encoder_test.cpp  common_types.h  cstdint.h  data_file.h  debug.h  (+74 more)
(+1378 files in other folders)
